--- a/src/styles.css
+++ b/src/styles.css
@@ -7,11 +7,10 @@
   
   body, html {
     width: 100%;
-    height: 100%;
     margin: 0;
     padding: 0;
     font-family: 'Arial', sans-serif;
-    background-color: #333; /* Fondo oscuro */
+    background-color: #333;
   }
   
   * {
