--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,12 @@
 #root {
-  max-width: 1280px;
+  max-width: 90%;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+}
+
+body {
+  font-family: 'Inter', sans-serif;
 }
 
 .logo {
